# grpc-device

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CreateVirtualEnvironment.cmake  LICENSE  README.md  SECURITY.md  ThirdPartyNotices.txt  buildDebug.bat  component.yml  copilot-build.ps1  core.proto  ex_to_test.py  prepareBuild.bat  project-meta-info.cmake  pyproject.toml  python_build_modules.txt  python_build_requirements.txt  requirements.txt  server.json  server_config.json
.github/: copilot-instructions.md  (+3 more)
examples/: pyproject.toml
examples/device enumerator/: EnumerateDevice.py
examples/device_enumerator/: EnumerateDevice.py
examples/nidaqmx/: analog-input-betterproto.py  analog-input-every-n-samples-aio.py  analog-input-every-n-samples.py  analog-input-everynsamples.py  analog-input.py  analog-output.py  counter-input.py  counter-output.py  digital-input-betterproto.py  digital-input.py  digital-output.py  dsa-shared-timebase-and-trig-analog-input-and-output-aio.py  dsa-shared-timebase-and-trig-analog-input-and-output.py
examples/nidaqmx/daqmx-streaming/: stream-read-analog-input-using-moniker-streaming.cpp  stream-read-digital-using-moniker-streaming.cpp
examples/nidaqmx/moniker-streaming/: CMakeLists.txt  stream-read-analog-input-using-moniker-streaming.cpp
examples/nidcpower/: measure-record.py  nidcpower_pb2.py  nidcpower_pb2_grpc.py  test_api.py
examples/nidigital/: PinMap.pinmap  Timing.digitiming  configure-voltage-levels-and-termination-voltage.py
examples/nidigitalpattern/: PinMap.pinmap  configure-voltage-levels-and-termination-voltage.py
examples/nidmm/: continuous-acquire-graph-multiple-points.py  continuous-acquire-multiple-points.py  nidmm_pb2.py  nidmm_pb2_grpc.py  session_pb2.py  session_pb2_grpc.py
examples/nifgen/: basic-arbitrary-waveform.py
examples/nifpga/: dio_operations.py  mio_operations.py  read_write_array_example.py  read_write_example.py  read_write_fifo_example.py
examples/nirf/: rfmx-instr-get-rfsa-handle.py  rfsa-rfsg-NR-analysis-only-modacc.py  specan-nr-txp-example.py
examples/nirfmxbluetooth/: acp-basic.py  txp-basic.py
examples/nirfmxcdma2k/: Acp.py  ModAcc.py  acp.py  modacc-basic.py  modacc.py
examples/nirfmxdemod/: ADemod-AM-basic.py  DDemod-QAM-basic.py
examples/nirfmxgsm/: evm.py  orfs.py
examples/nirfmxlte/: acp-single-carrier.py  ul-modacc-single-carrier.py
examples/nirfmxnr/: acp-single-carrier.py  acp-txp-modacc-single-carrier.py  modacc-noncontiguous-multicarrier.py  txp-single-carrier.py
examples/nirfmxspecan/: acp-basic.py  spectrum-basic.py  txp-basic.py
examples/nirfmxtdscdma/: acp.py  modacc.py
examples/nirfmxwcdma/: acp-single-carrier.py  modacc-single-carrier.py
examples/nirfmxwlan/: ofdm-modacc-evm-based-autolevel.py  ofdm-modacc-txp-composite.py  ofdm-modacc.py  sem.py  txp-basic.py
examples/nirfsa/: getting-started-iq.py  getting-started-spectrum.py
examples/nirfsg/: attenuation-tables-generation.py  gen_from_tdms.py  generate-from-tdms.py  getting-started-single-tone-generation.py  reference-clock.py  rfsg-multitone-example.py
examples/niscope/: fetch-continuous.py  fetch-forever.py  fetch.py  graph-measurement-betterproto.py  graph-measurement-betterpython.py  graph-measurement.py  niscope_pb2_grpc.py  plot-read-waveform-betterproto.py  plot-read-waveform-betterpython.py  plot-read-waveform.py  scope-read.py  session_pb2_grpc.py
examples/niscope/better-python/: graph-measurement-betterpython.py  niScope_Measurement_Library.py  scope-read-betterpython.py  scopeRead.py
examples/niscope/python/: EX_niScope_Measurement_Library.py  niScope_Measurement_Library.py  niscope.proto  scopeRead.py
examples/niswitch/: control-relay.py  controlling-an-individual-relay.py  software-scanning.py
examples/nitclk/: multi-device-configured-acquisition-tclk.py  synchronize-tclk.py
examples/nixnet/: CAN_Convert_Frames_to_from_Signals.py  CAN_SIGNAL_SINGLE_POINT_OUTPUT.py  ENET_Convert_Frames_to_from_Signals.py  Ethernet_Frame_Stream_Input_Reader.py  FlexRay_Signal_Single_Point_Input.py  LIN_Signal_Single_Point_Output.py  can-signal-single-point-output.py  ethernet-frame-stream-input-reader.py  flexray-signal-single-point-input.py  lin-signal-single-point-output.py  nixnet.proto  nixnet_pb2.py  nixnet_pb2_grpc.py  session_pb2.py
examples/session/: EnumerateDevice.py  enumerate-device.py  enumerate-software.py  nisyscfg.py  session-reservation.py  session-utilities.py  session_pb2.py
examples/visa/: find-resources.py  open-close-session.py
source/protobuf/: CMakeLists.txt  debugsessionproperties_restricted.proto  nidevice.proto  session.proto
source/server/: CMakeLists.txt  async_method_context.h  async_operation.cpp  async_operation.h  async_processing_loop.h  async_server_write_queue.h  calibration_operations_restricted_service.cpp  calibration_operations_restricted_service.h  calibration_operations_restricted_service_registar.cpp  calibration_operations_restricted_service_registar.h  calibration_operations_restricted_service_registrar.cpp  calibration_operations_restricted_service_registrar.h  callback_router.h  common_types.h  converters.h  core_configuration.h  core_server.cpp  core_service_registrar.cpp  core_service_registrar.h  core_services_registrar.cpp  core_services_registrar.h  cpu_affinity_configuration.h  data_moniker_service.cpp  data_moniker_service.h  debug_session_properties_restricted_service.cpp  debug_session_properties_restricted_service.h  debug_session_properties_restricted_service_registrar.cpp  debug_session_properties_restricted_service_registrar.h  device_enumerator.cpp  device_enumerator.h  device_enumerator_fake_library.cpp  device_enumerator_fake_library.h  device_enumerator_library.cpp  device_enumerator_library.h  device_enumerator_library_interface.h  exceptions.h  fake_shared_library.h  feature_toggles.cpp  feature_toggles.h  logging.cpp  (+42 more)
source/server/linux/: daemonize.cpp  daemonize.h  syslog_logging.cpp  syslog_logging.h
source/server/windows/: console_ctrl_handler.cpp  console_ctrl_handler.h
(+765 files in other folders)
